fixed spacing issue

--- a/styles/banner.module.css
+++ b/styles/banner.module.css
@@ -7,5 +7,5 @@
 }
 
 .banner p {
-    margin: 0;
+    /* margin: 0; */
 }
